Elasticsearch to version 7

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 # docker exec -it 5e57902b199b /bin/bash
-FROM python:latest
+FROM python:3.8.3-slim
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
