--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,7 +23,8 @@ services:
     volumes:
       - elasticsearch-data:/usr/share/elasticsearch/data
     ports:
-      - 9200:9200
+      - 127.0.0.1:9200:9200
+    restart: always
 
   db:
     image: postgres:12.0-alpine
@@ -33,6 +34,7 @@ services:
       - POSTGRES_USER=ddosdb
       - POSTGRES_PASSWORD=ddosdb
       - POSTGRES_DB=ddosdb
+    restart: always
 
   ddosdb:
     build:
@@ -49,6 +51,7 @@ services:
     depends_on:
       - db
       - elasticsearch
+    restart: always
 
   nginx:
     build: ./nginx
@@ -59,6 +62,7 @@ services:
       - 80:80
     depends_on:
       - ddosdb
+    restart: always
 
 volumes:
   elasticsearch-data:
