--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ Django==3.2
 django-debug-toolbar==3.2.1
 django-searchable-encrypted-fields==0.1.9
 django-sslserver==0.22
+gunicorn==20.1.0
 idna==2.10
 nclib==1.0.0
 numpy==1.20.2
 pandas==1.2.4
+psycopg2-binary==2.8.6
 pycryptodome==3.10.1
 pymongo==3.11.3
 python-dateutil==2.8.1
