--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -42,6 +42,8 @@ services:
       - POSTGRES_USER=ddosdb
       - POSTGRES_PASSWORD=ddosdb
       - POSTGRES_DB=ddosdb
+    expose:
+      - 5432
     restart: unless-stopped
 
   ddosdb:
