Added https and self-signed localhost certificate

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,16 +5,40 @@ upstream ddosdb {
 server {
 
     listen 80;
+    listen [::]:80;
 
-    location / {
-        proxy_pass http://ddosdb;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
+#    location / {
+#        proxy_pass http://ddosdb;
+#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#        proxy_set_header Host $host;
+#        proxy_redirect off;
+#    }
 
-    location /static/ {
-        alias /home/ddosdb/ddosdb-static/;
-    }
+#    location /static/ {
+#        alias /home/ddosdb/ddosdb-static/;
+#    }
+
+    server_name _;
+    return 301 https://$host$request_uri;
+}
+
+server {
+     listen 443 ssl;
+     listen [::]:443 ssl;
+
+     ssl_certificate /etc/ssl/certs/ddosdb-localhost.crt;
+     ssl_certificate_key /etc/ssl/private/ddosdb-localhost.key;
+     ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+
+     location / {
+         proxy_pass http://ddosdb;
+         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+         proxy_set_header Host $host;
+         proxy_redirect off;
+     }
+
+     location /static/ {
+         alias /home/ddosdb/ddosdb-static/;
+     }
 
 }
