Generate self-signed certificate in build script

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -75,6 +75,12 @@ services:
       - ddosdb
     restart: unless-stopped
 
+#  certbot:
+#    image: certbot/certbot
+#    restart: unless-stopped
+#    depends_on:
+#      - nginx
+
 volumes:
   mongodb-data:
 #    driver: local
