--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -7,24 +7,38 @@ server {
     listen 80;
     listen [::]:80;
 
-#    location / {
-#        proxy_pass http://ddosdb;
-#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#        proxy_set_header Host $host;
-#        proxy_redirect off;
+    server_name localhost;
+
+    # Specific location for certbot (let's encrypt certificate)
+#    location /.well-known/ {
+#        root /var/lib/certbot;
+#        allow all;
 #    }
 
-#    location /static/ {
-#        alias /home/ddosdb/ddosdb-static/;
-#    }
+    location ^~ /.well-known/ {
+	    default_type "text/plain";
+	    root /etc/letsencrypt/www;
+    }
 
-    server_name _;
-    return 301 https://$host$request_uri;
+    # For localhost we don't redirect to https, should do this for virtual server for specific domain
+    location / {
+        proxy_pass http://ddosdb;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+    location /static/ {
+        alias /home/ddosdb/ddosdb-static/;
+    }
+
 }
 
 server {
      listen 443 ssl;
      listen [::]:443 ssl;
+
+     server_name localhost;
 
      ssl_certificate /etc/ssl/certs/ddosdb-localhost.crt;
      ssl_certificate_key /etc/ssl/private/ddosdb-localhost.key;
