--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -35,24 +35,28 @@ server {
 }
 
 server {
-     listen 443 ssl;
-     listen [::]:443 ssl;
+    listen 443 ssl;
+    listen [::]:443 ssl;
 
-     server_name localhost;
+    server_name localhost;
 
-     ssl_certificate /etc/ssl/certs/ddosdb-localhost.crt;
-     ssl_certificate_key /etc/ssl/private/ddosdb-localhost.key;
-     ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+    ssl_certificate /etc/ssl/certs/ddosdb-localhost.crt;
+    ssl_certificate_key /etc/ssl/private/ddosdb-localhost.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_session_cache shared:le_nginx_SSL:10m;
+    ssl_session_timeout 1440m;
+    ssl_session_tickets off;
+    ssl_prefer_server_ciphers off;
+    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA";
 
-     location / {
-         proxy_pass http://ddosdb;
-         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-         proxy_set_header Host $host;
-         proxy_redirect off;
-     }
+    location / {
+        proxy_pass http://ddosdb;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
 
-     location /static/ {
-         alias /home/ddosdb/ddosdb-static/;
-     }
-
+    location /static/ {
+        alias /home/ddosdb/ddosdb-static/;
+    }
 }
