--- a/docker/nginx/nginx-conf.template
+++ b/docker/nginx/nginx-conf.template
@@ -7,28 +7,33 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name $DDOSDB_SERVER_NAME;
+    server_name $DDOSDB_FQDN;
     return 301 https://$host$request_uri;
 }
 
 server {
-     listen 443 ssl;
-     listen [::]:443 ssl;
+    listen 443 ssl;
+    listen [::]:443 ssl;
 
-     server_name $DDOSDB_SERVER_NAME;
+    server_name $DDOSDB_FQDN;
 
-     ssl_certificate /etc/letsencrypt/live/$DDOSDB_SERVER_NAME/cert.pem;
-     ssl_certificate_key /etc/letsencrypt/live/$DDOSDB_SERVER_NAME/privkey.pem;
-     ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+    ssl_certificate /etc/letsencrypt/live/$DDOSDB_FQDN/cert.pem;
+    ssl_certificate_key /etc/letsencrypt/live/$DDOSDB_FQDN/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_session_cache shared:le_nginx_SSL:10m;
+    ssl_session_timeout 1440m;
+    ssl_session_tickets off;
+    ssl_prefer_server_ciphers off;
+    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA";
 
-     location / {
-         proxy_pass http://ddosdb;
-         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-         proxy_set_header Host $host;
-         proxy_redirect off;
-     }
+    location / {
+        proxy_pass http://ddosdb;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
 
-     location /static/ {
-         alias /home/ddosdb/ddosdb-static/;
-     }
+    location /static/ {
+        alias /home/ddosdb/ddosdb-static/;
+    }
 }
