--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -40,6 +40,11 @@ server {
 
     server_name localhost;
 
+    location ^~ /.well-known/ {
+	    default_type "text/plain";
+	    root /etc/letsencrypt/www;
+    }
+
     ssl_certificate /etc/ssl/certs/ddosdb-localhost.crt;
     ssl_certificate_key /etc/ssl/private/ddosdb-localhost.key;
     ssl_protocols TLSv1.2 TLSv1.3;
