--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -5,8 +5,8 @@ RUN apk add certbot certbot-nginx
 RUN mkdir /etc/letsencrypt
 RUN mkdir /etc/letsencrypt/www
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
 #COPY nginx.conf /etc/nginx/conf.d/ddosdb-localhost.conf
 
-COPY ddosdb-localhost.crt /etc/ssl/certs/.
-COPY ddosdb-localhost.key /etc/ssl/private/.
+COPY temp/ddosdb-localhost.crt /etc/ssl/certs/.
+COPY temp/ddosdb-localhost.key /etc/ssl/private/.
