--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -7,61 +7,25 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name localhost;
+    server_name localhost 127.0.0.1 [::];
 
     # Specific location for certbot (let's encrypt certificate)
-#    location /.well-known/ {
-#        root /var/lib/certbot;
-#        allow all;
-#    }
-
-    location ^~ /.well-known/ {
-	    default_type "text/plain";
-	    root /etc/letsencrypt/www;
-    }
+    include snippets/well-known.conf;
 
     # For localhost we don't redirect to https, should do this for virtual server for specific domain
-    location / {
-        proxy_pass http://ddosdb;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-
-    location /static/ {
-        alias /home/ddosdb/ddosdb-static/;
-    }
-
+    include snippets/ddosdb-locations.conf;
 }
 
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
 
-    server_name localhost;
+    server_name localhost 127.0.0.1 [::];
 
-    location ^~ /.well-known/ {
-	    default_type "text/plain";
-	    root /etc/letsencrypt/www;
-    }
+    include snippets/well-known.conf;
 
     ssl_certificate /etc/ssl/certs/ddosdb-localhost.crt;
     ssl_certificate_key /etc/ssl/private/ddosdb-localhost.key;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_session_cache shared:le_nginx_SSL:10m;
-    ssl_session_timeout 1440m;
-    ssl_session_tickets off;
-    ssl_prefer_server_ciphers off;
-    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA";
-
-    location / {
-        proxy_pass http://ddosdb;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-
-    location /static/ {
-        alias /home/ddosdb/ddosdb-static/;
-    }
+    include snippets/ssl-settings.conf;
+    include snippets/ddosdb-locations.conf;
 }
