--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -8,6 +8,7 @@ server {
     listen [::]:80;
 
     server_name localhost 127.0.0.1 [::];
+    add_header Content-Security-Policy "default-src 'self';frame-src 'self';frame-ancestors 'self';";
 
     # Specific location for certbot (let's encrypt certificate)
     include snippets/well-known.conf;
@@ -19,6 +20,8 @@ server {
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
+
+    add_header Content-Security-Policy "default-src 'self';frame-src 'self';frame-ancestors 'self';";
 
     server_name localhost 127.0.0.1 [::];
 
