--- a/docker/nginx/snippets/ddosdb-locations.conf
+++ b/docker/nginx/snippets/ddosdb-locations.conf
@@ -2,9 +2,11 @@
         proxy_pass http://ddosdb;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         proxy_redirect off;
     }
 
     location /static/ {
         alias /home/ddosdb/ddosdb-static/;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     }
