--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -21,14 +21,20 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
 
-    add_header Content-Security-Policy "default-src 'self';frame-src 'self';frame-ancestors 'self';";
-
     server_name localhost 127.0.0.1 [::];
 
     include snippets/well-known.conf;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header Content-Security-Policy "default-src 'self';frame-src 'self';frame-ancestors 'self';";
 
     ssl_certificate /etc/ssl/certs/ddosdb-localhost.crt;
     ssl_certificate_key /etc/ssl/private/ddosdb-localhost.key;
-    include snippets/ssl-settings.conf;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:le_nginx_SSL:10m;
+    ssl_session_timeout 1440m;
+    ssl_session_tickets off;
+
     include snippets/ddosdb-locations.conf;
 }
