--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -24,8 +24,7 @@ server {
     server_name localhost 127.0.0.1 [::];
 
     include snippets/well-known.conf;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header Content-Security-Policy "default-src 'self';frame-src 'self';frame-ancestors 'self';";
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' ; style-src-attr 'self' 'unsafe-inline'; img-src 'self'; connect-src 'self'; font-src 'self'; object-src 'none'; media-src 'self'; form-action 'self'; frame-ancestors 'self'; report-uri /csp-report/" always;
 
     ssl_certificate /etc/ssl/certs/ddosdb-localhost.crt;
     ssl_certificate_key /etc/ssl/private/ddosdb-localhost.key;
