--- a/docker/nginx/nginx-conf.template
+++ b/docker/nginx/nginx-conf.template
@@ -14,7 +14,7 @@ server {
     server_name $DDOSDB_FQDN;
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' ; style-src-attr 'self' 'unsafe-inline'; img-src 'self'; connect-src 'self'; font-src 'self'; object-src 'none'; media-src 'self'; form-action 'self'; frame-ancestors 'self'; report-uri /csp-report/" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' ; style-src-attr 'self' 'unsafe-inline'; img-src 'self'; connect-src 'self'; font-src 'self'; object-src 'none'; media-src 'self'; form-action 'self'; frame-ancestors 'self'; report-uri /csp-report" always;
 
     include snippets/well-known.conf;
 
