--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -8,13 +8,14 @@ server {
     listen [::]:80;
 
     server_name localhost 127.0.0.1 [::];
-    add_header Content-Security-Policy "default-src 'self';frame-src 'self';frame-ancestors 'self';";
 
     # Specific location for certbot (let's encrypt certificate)
     include snippets/well-known.conf;
 
-    # For localhost we don't redirect to https, should do this for virtual server for specific domain
-    include snippets/ddosdb-locations.conf;
+    # Redirect everything else
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
