--- a/docker/nginx/snippets/ddosdb-locations.conf
+++ b/docker/nginx/snippets/ddosdb-locations.conf
@@ -3,6 +3,8 @@
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+        client_max_body_size       1m;
+        client_body_buffer_size    256k;
     }
 
     location /static/ {
