Fixed Django container waiting for Postgres db

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,8 @@
 # docker exec -it 5e57902b199b /bin/bash
 FROM python:3.9-slim
 
+RUN apt-get update && apt-get install -y netcat
+
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
