Initial Celery Sync version working

--- a/mongodb-rabbitmq/docker-compose.yml
+++ b/mongodb-rabbitmq/docker-compose.yml
@@ -26,5 +26,10 @@ services:
       - mongodb
     restart: unless-stopped
 
+  rabbitmq:
+    image: rabbitmq
+    ports:
+      - 127.0.0.1:5672:5672
+
 volumes:
   mongodb_dev_data:
