Docker deployment with celery worker and beat

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -46,12 +46,25 @@ services:
       - 5432
     restart: unless-stopped
 
+  rabbitmq:
+    container_name: ddosdb_rabbitmq
+    image: rabbitmq
+    expose:
+      - 5672
+    networks:
+      - ddosdb
+    restart: unless-stopped
+
   ddosdb:
     container_name: ddosdb_ddosdb
     build:
       context: ..
       dockerfile: docker/Dockerfile
-    command: gunicorn website.wsgi:application --bind 0.0.0.0:8000
+    command: sh -c  "python manage.py collectstatic --no-input && "\
+                    "python manage.py migrate && "\
+                    "python manage.py createsuperuser --noinput || true &&"\
+                    " python manage.py celery && "\
+                    "gunicorn website.wsgi:application --bind 0.0.0.0:8000"
     env_file:
       - ./temp/environment.prod
     volumes:
@@ -64,6 +77,35 @@ services:
     depends_on:
       - db
       - mongodb
+      - rabbitmq
+    restart: unless-stopped
+
+  celery_worker:
+    container_name: ddosdb_celery_worker
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile
+    command: sh -c "./wait-for ddosdb:8000 -t 300 && celery -A ddosdb worker -l info"
+    env_file:
+      - ./temp/environment.prod
+    depends_on:
+      - ddosdb
+    networks:
+      - ddosdb
+    restart: unless-stopped
+
+  celery_beat:
+    container_name: ddosdb_celery_beat
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile
+    command: sh -c "./wait-for ddosdb:8000 -t 300 && celery -A ddosdb beat -l info"
+    env_file:
+      - ./temp/environment.prod
+    depends_on:
+      - ddosdb
+    networks:
+      - ddosdb
     restart: unless-stopped
 
   nginx:
