--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ click-repl==0.2.0
     # via celery
 demjson==2.2.4
     # via -r requirements.in
-django==3.2.5
+django>=3.2.10
     # via
     #   -r requirements.in
     #   django-celery-beat
@@ -56,7 +56,7 @@ idna==2.10
     # via requests
 kombu==5.2.3
     # via celery
-numpy==1.20.2
+numpy>=1.21
     # via pandas
 pandas==1.2.4
     # via -r requirements.in
