--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,10 @@
 # docker exec -it 5e57902b199b /bin/bash
 # Need python < 3.9 and fuller version than slim, because of problems installing pandas/numpy for MAC M1 arch.
-# Build still takes an awful lang time... (> 5 mins)
-FROM python:3.8-bullseye
+# Build still takes an awful lang time (> 5 mins).
+# For now: simply don't build on Mac M1.
+# FROM python:3.8-bullseye
+
+FROM python:3.9-slim
 
 RUN apt-get update && apt-get install -y netcat
 
