--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-celery-results==2.2.0
 django-debug-toolbar==3.2.1
 django-sslserver==0.22
 django-timezone-field==4.1.2
+djangorestframework==3.13.1
 gunicorn==20.1.0
 idna==2.10
 jsonschema==3.2.0
