--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ Django==3.2.12
 django-celery-beat==2.2.0
 django-celery-results==2.2.0
 django-debug-toolbar==3.2.1
+django-ipware==3.0.7
+django-rest-multitokenauth==1.4.0
 django-sslserver==0.22
 django-timezone-field==4.1.2
 djangorestframework==3.13.1
