--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -60,6 +60,7 @@ services:
                     "python manage.py migrate && "\
                     "python manage.py createsuperuser --noinput || true &&"\
                     "python manage.py initsync && "\
+                    "python manage.py initgroups && "\
                     "gunicorn website.wsgi:application --bind 0.0.0.0:8000"
     env_file:
       - ./temp/environment.prod
