--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 # Explicitly specify linux/amd64 for M1/M2 Macs to force emulation
 FROM --platform=linux/amd64 python:3.9-slim
 
-RUN apt-get update && apt-get install -y netcat
+RUN apt-get update && apt-get install -y netcat-traditional
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
