--- a/requirements.in
+++ b/requirements.in
@@ -4,11 +4,11 @@ django_celery_beat
 django_celery_results
 requests
 pandas
-pymongo
+pymongo==3.12.1
 django_debug_toolbar
 django-sslserver
 djangorestframework
-django-rest-multitokenauth
+django-rest-multitokenauth==1.4.0
 psycopg2-binary
 gunicorn
 pymisp
