--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,44 @@
-amqp==5.0.9
-asgiref==3.3.4
-attrs==21.4.0
-billiard==3.6.4.0
-celery==5.2.7
-certifi==2023.7.22
-charset-normalizer==2.0.11
-click==8.0.3
-click-didyoumean==0.0.3
+amqp==5.2.0
+asgiref==3.8.1
+billiard==4.2.0
+celery==5.4.0
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
 click-plugins==1.1.1
-click-repl==0.2.0
-deprecated==1.2.13
-django==3.2.25
-django-celery-beat==2.2.0
-django-celery-results==2.4.0
-django-debug-toolbar==3.2.1
+click-repl==0.3.0
+cron-descriptor==1.4.3
+Deprecated==1.2.14
+Django==4.2.13
+django-celery-beat==2.6.0
+django-celery-results==2.5.1
+django-debug-toolbar==4.4.2
 django-ipware==3.0.7
 django-rest-multitokenauth==1.4.0
 django-sslserver==0.22
-django-timezone-field==4.1.2
-djangorestframework==3.13.1
+django-timezone-field==6.1.0
+djangorestframework==3.15.1
 gunicorn==22.0.0
 idna==3.7
-jsonschema==4.5.1
-kombu==5.2.3
-numpy==1.22.2
-pandas==1.2.4
-prompt-toolkit==3.0.19
-psycopg2-binary==2.9.1
-pymisp==2.4.159
-pymongo==4.6.3
-pyrsistent==0.18.1
-python-crontab==2.5.1
-python-dateutil==2.8.2
-pytz==2022.1
-requests==2.31.0
-six==1.15.0
+kombu==5.3.7
+numpy==1.26.4
+packaging==24.1
+pandas==2.2.2
+prompt_toolkit==3.0.47
+psycopg2-binary==2.9.9
+publicsuffixlist==0.10.1.20240612
+pymisp==2.4.193
+pymongo==3.12.1
+python-crontab==3.1.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+requests==2.32.3
+six==1.16.0
 sqlparse==0.5.0
-urllib3==1.26.18
-vine==5.0.0
-wcwidth==0.2.5
-wrapt==1.13.3
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.1
+vine==5.1.0
+wcwidth==0.2.13
+wrapt==1.16.0
